--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <h2 class="experience-sub-title project-title">Blackjack Game</h2>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/blackjack'"> Github</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"> Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>
                 </div>
             </div>
 
@@ -176,7 +176,7 @@
                 <h2 class="experience-sub-title project-title">Coffee Machine</h2>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/Coffee_Machine'"> Github</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"> Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>
                 </div>
             </div>
         
@@ -187,8 +187,8 @@
             </div>
             <h2 class="experience-sub-title project-title">Snake Game</h2>
             <div class="btn-container">
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"> Github</button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"> Live Demo</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/Snake_game'"> Github</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>
             </div>
         </div>
     </div>
@@ -203,7 +203,7 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon">
-                <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+                <p><a href="mailto:owen_gian@yahoo.com">owen_gian@yahoo.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="Linkedin icon" class="icon contact-icon">
