Profile pic changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!--Profile Section-->
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.png" alt="Owen Batista Profile Picture">
+            <img src="./assets/profile-pic2.png" alt="Owen Batista Profile Picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -65,13 +65,14 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/about-pic.jpg" alt="Profile Picture" class="about-pic">
+                <img src="./assets/about-pic2.jpg" alt="Profile Picture" class="about-pic">
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="Experience icon" class="icon">
                         <h3>Experience</h3>
+                        <p>1 year <br>Regional Supply Planner Intern</p>
                         <p>2+ years <br>Classroom Experience</p>
                     </div>
                     <div class="details-container">
@@ -81,7 +82,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>I recently completed an internship with Hewlett Packard Enterprise where I managed end to end processes, generated daily reports using SAP systems and worked directly with suppliers to address issues. Prior to that I spent several years working in an automotive shop, where I developed strong customer service skills and learned how to manage tasks in a fast-paced, high-volume environment. </p>
+                    <p>Interned at Hewlett Packard Enterprise (Oct. 2022 - Oct. 2023) where I managed end to end processes, generated daily reports using SAP systems and worked directly with suppliers to address issues. Prior to that I spent several years working in an automotive shop, where I developed strong customer service skills and learned how to manage tasks in a fast-paced, high-volume environment.</p>
                 </div>
             </div>
         </div>
@@ -165,7 +166,7 @@
                 <h2 class="experience-sub-title project-title">Blackjack Game</h2>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/blackjack'"> Github</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>
+                    <!--<button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>-->
                 </div>
             </div>
 
@@ -176,7 +177,7 @@
                 <h2 class="experience-sub-title project-title">Coffee Machine</h2>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/Coffee_Machine'"> Github</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>
+                    <!--<button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>-->
                 </div>
             </div>
         
@@ -188,7 +189,7 @@
             <h2 class="experience-sub-title project-title">Snake Game</h2>
             <div class="btn-container">
                 <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/Snake_game'"> Github</button>
-                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>
+                <!--<button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>-->
             </div>
         </div>
     </div>
