--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
             <div class="about-containers">
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/Blackjack.png" alt="Project 1" class="project-img">
+                    <img src="./assets/Pong-game.png" alt="Project 1" class="project-img">
                 </div>
-                <h2 class="experience-sub-title project-title">Blackjack Game</h2>
+                <h2 class="experience-sub-title project-title">Pong Game</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/blackjack'"> Github</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/Pong_game'"> Github</button>
                     <!--<button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>-->
                 </div>
             </div>
@@ -181,7 +181,6 @@
                 </div>
             </div>
         
-
         <div class="details-container color-container">
             <div class="article-container">
                 <img src="./assets/snake-game.png" alt="Project 3" class="project-img">
@@ -192,7 +191,18 @@
                 <!--<button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>-->
             </div>
         </div>
-    </div>
+
+        <div class="details-container color-container">
+            <div class="article-container">
+                <img src="./assets/Blackjack.png" alt="Project 4" class="project-img">
+            </div>
+            <h2 class="experience-sub-title project-title">Blackjack Game</h2>
+            <div class="btn-container">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/blackjack'"> Github</button>
+                <!--<button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>-->
+            </div>
+        </div>
+        </div>
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'">
     </section>
