--- a/index.html
+++ b/index.html
@@ -172,7 +172,18 @@
 
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/coffee-machine.png" alt="Project 2" class="project-img">
+                    <img src="./assets/turtle-crossing.png" alt="Project 2" class="project-img">
+                </div>
+                <h2 class="experience-sub-title project-title">Turtle Crossing game</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista/turtle_crossing'"> Github</button>
+                    <!--<button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/OwenBatista'"> Live Demo</button>-->
+                </div>
+            </div>
+
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="./assets/coffee-machine.png" alt="Project 3" class="project-img">
                 </div>
                 <h2 class="experience-sub-title project-title">Coffee Machine</h2>
                 <div class="btn-container">
@@ -183,7 +194,7 @@
         
         <div class="details-container color-container">
             <div class="article-container">
-                <img src="./assets/snake-game.png" alt="Project 3" class="project-img">
+                <img src="./assets/snake-game.png" alt="Project 4" class="project-img">
             </div>
             <h2 class="experience-sub-title project-title">Snake Game</h2>
             <div class="btn-container">
@@ -194,7 +205,7 @@
 
         <div class="details-container color-container">
             <div class="article-container">
-                <img src="./assets/Blackjack.png" alt="Project 4" class="project-img">
+                <img src="./assets/Blackjack.png" alt="Project 5" class="project-img">
             </div>
             <h2 class="experience-sub-title project-title">Blackjack Game</h2>
             <div class="btn-container">
